--- a/index.html
+++ b/index.html
@@ -140,4 +140,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>  this html filr do u need css or js also to make that happen
+</html> 
